Ingress/Manifest/contactmepage-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: contactmepage-svc
spec:
  selector:
    app: contactmepage-app
  ports:
    - protocol: TCP
      port: 80      # The port on which the service is exposed
      targetPort: 80  # The port on which your app is running inside the pod
  type: ClusterIP
