Ingress/Manifest/professionpage-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: professionpage-svc
spec:
  selector:
    app: professionpage-app
  ports:
    - protocol: TCP
      port: 80      # The port on which the service is exposed
      targetPort: 80  # The port on which your app is running inside the pod
  type: ClusterIP
